--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,13 +1,13 @@
 .contact {
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Centers content vertically */
-  align-items: center; /* Centers content horizontally */
-  height: 75vh;
+  justify-content: center;
+  align-items: center;
+  height: auto; /* Adjusted height to auto for better spacing */
   background: #282c34;
   color: yellowgreen;
   text-align: center;
-  padding: 105px;
+  padding: 60px 20px;
 }
 
 .contact form {
@@ -57,4 +57,24 @@
   margin-top: 15px;
   color: yellowgreen;
   font-size: 16px;
+}
+
+.contact input:focus,
+.contact textarea:focus {
+  outline: none;
+  border-color: white;
+  box-shadow: 0 0 5px yellowgreen;
+}
+@media (max-width: 768px) {
+  .contact input,
+  .contact textarea {
+    width: 100%;
+    max-width: 350px;
+    margin: 10px 0;
+  }
+
+  .contact button {
+    width: 100%;
+    margin-top: 20px;
+  }
 }
