--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -2,8 +2,9 @@
   background: #282c34;
   color: yellowgreen;
   text-align: center;
-  padding: 50px 0;
-  padding: 105px;
+  padding: 105px 20px; /* Added some horizontal padding */
+  height: auto; /* Adjusted height to auto */
+  margin-bottom: 0px; /* Added margin to separate sections */
 }
 
 .projects-container {
@@ -21,6 +22,7 @@
   border-radius: 10px;
   text-align: center;
   transition: transform 0.3s ease-in-out;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .project-card:hover {
@@ -49,16 +51,21 @@
 .github-icon:hover {
   color: yellowgreen;
 }
-
-/* Responsive Design */
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .projects-container {
-    grid-template-columns: repeat(2, 1fr);
+    width: 90%;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
-}
 
-@media (max-width: 600px) {
-  .projects-container {
-    grid-template-columns: repeat(1, 1fr);
+  .project-card {
+    padding: 15px;
+  }
+
+  .project-img {
+    height: 130px;
+  }
+
+  .github-icon {
+    font-size: 22px;
   }
 }
